--- a/mod4.html
+++ b/mod4.html
@@ -5,9 +5,10 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="js/mod4.js"></script>
+	<script src="mod4.js"></script>
     <title>Assignment 4</title>
 	</head>
 	<body>hello</body>
-	
 </html>
+	
+
